# marc

./: .gitignore  LICENSE  README.md  marc.cabal
src/: Main.hs  Marc.hs
test/: Test.hs
test/data/: record.mrc  records303.mrc
