name:                   marc
version:                0.1.0
synopsis:               Parse MARC bibliographic files.
description:            Allows parsing of MARC bibliographic data format (https://www.loc.gov/marc/).
homepage:               http://github.com/ccatalfo/marc
license:                MIT
license-file:           LICENSE
author:                 Chris Catalfo
maintainer:             foxnorth@gmail.com
copyright:              2016
category:               Unknown
build-type:             Simple
-- extra-source-files:
cabal-version:          >=1.10
source-repository head
  type:     git
  location: http://darcs.haskell.org/cabal/

executable marcdump
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        filepath >= 1.3.0.1,
                        parallel,
                        base >=4.5 && < 4.10
                      , MissingH
                        , optparse-applicative >= 0.11.0.2
  hs-source-dirs:       src
  ghc-options:          -Wall
  default-language:     Haskell2010

library
  exposed-modules:      Marc
  -- other-modules:
  -- other-extensions:
  build-depends:        filepath >= 1.3.0.1,
                        base >=4.5 && < 4.10
                        , MissingH
  ghc-options:          -Wall
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite Tests
  hs-source-dirs:       test
  Type:                 exitcode-stdio-1.0
  ghc-options:          -Wall
  main-is:              Test.hs
  default-language:     Haskell2010
  build-depends:        filepath >= 1.3.0.1,
                        base >=4.5 && < 4.10
                        , marc
                        , HUnit
                        , QuickCheck
                        , smallcheck
                        , tasty
                        , tasty-hunit
                        , tasty-quickcheck
                        , tasty-smallcheck
                        , MissingH
                        , bytestring
